syntax = "proto2";

package Authentication;

message CreateAccountPacket {
  required int32 userId = 1;
  required string email = 2;
  required string salt = 3;
  required string hashed_password = 4;
}

message CreateAccountSuccessPacket {
  required int32 userId = 1;
}

message CreateAccountFailurePacket {
  required int32 userId = 1;
  enum reason {
    ACCOUNT_ALREADY_EXISTS = 0;
    INVALID_PASSWORD = 1;
    INTERNAL_SERVER_ERROR = 2;
  }
  
  required reason reasonId = 2;
}

message LoginPacket {
  required int32 userId = 1;
  required string email = 2;
  required string hashed_password = 3;
}

